Исправила стили своего компонента (избавилась от синего)

--- a/resources/sass/cabinet.scss
+++ b/resources/sass/cabinet.scss
@@ -13,9 +13,44 @@
     color: #FFFFFF;
 }
 
-.ant-btn-primary {
+.addValue-btn.ant-btn-primary {
     background-color: #ffe58f;
     color: #000000;
 }
+.addValue-btn.ant-btn-primary:not(:disabled):hover {
+    background-color: #fff;
+    color: #000000;
+}
+.cabinet-color-txt {
+    font-size: 19px;
+}
 
+.addMeter-btn.ant-btn-default:not(:disabled):hover {
+    color: #D4C17F;
+    border-color: #D4C17F;
+}
 
+.meter-table .ant-pagination .ant-pagination-item-active {
+    border-color: #D4C17F;
+}
+
+.meter-input .ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover .ant-select-selector {
+    border-color: #D4C17F;
+}
+.meter-input .ant-input:hover {
+    border-color: #D4C17F;
+}
+
+body > div:nth-child(2) > div > div.ant-modal-wrap > div > div.ant-modal-content > div.ant-modal-footer > button.ant-btn.css-dev-only-do-not-override-sk7ap8.ant-btn-primary {
+    color: #000000;
+    border-color: #000000;
+}
+body > div:nth-child(2) > div > div.ant-modal-wrap > div > div.ant-modal-content > div.ant-modal-footer > button.ant-btn.css-dev-only-do-not-override-sk7ap8.ant-btn-primary:hover {
+    background-color: #ffe58f;
+    color: #000000;
+    border-color: #ffe58f;
+}
+body > div:nth-child(2) > div > div.ant-modal-wrap > div > div.ant-modal-content > div.ant-modal-footer > button.ant-btn.css-dev-only-do-not-override-sk7ap8.ant-btn-default:hover {
+    color: #D4C17F;
+    border-color: #D4C17F;
+}
