--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -17,3 +17,14 @@
     font-size: 16px;
 }
 
+@media (max-width:320px) {
+
+    .about-title {
+        margin-left: 30px;
+    }
+
+    .about-text {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
