--- a/resources/css/logo-header.css
+++ b/resources/css/logo-header.css
@@ -29,14 +29,15 @@
 
 @media (max-width:320px) {
     .logo-house {
-        margin-left: 79px;
+        margin-left: 77px;
         margin-top: 20px;
     }
+}
 
-    .residential {
-        margin-left: 75px;
+@media (min-width: 321px) and (max-width: 768px) {
+    .logo-house {
+        margin-left: -16px;
+        margin-top: -21px;
     }
-
-
 }
 
