--- a/resources/css/houses_list.css
+++ b/resources/css/houses_list.css
@@ -1,3 +1,7 @@
+#housesList {
+    background-color: #242B33;
+ }
+
 .hl_title {
     font-family: 'Playfair Display', serif;
     font-weight: 700;
