--- a/resources/sass/cabinet.scss
+++ b/resources/sass/cabinet.scss
@@ -1,9 +1,19 @@
+.cabinet-title {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.33;
+    color: #D4C17F;
+    margin-bottom: 50px;
+}
+
 .cabinet-txt {
     font-family: "Raleway", sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 1.5;
     color: #FFFFFF;
+    text-align: left;
 }
 
 .end-cabinet {
