--- a/resources/css/Identically/menu.css
+++ b/resources/css/Identically/menu.css
@@ -1,31 +1,26 @@
-#main_menu {
-    background: #242B33;
-    height: 73px;
-}
+/*.house {*/
+/*    text-decoration: none;*/
+/*    color: #FFFFFF;*/
+/*    font-family: Post No Bills Jaffna SemiBold, sans-serif;*/
+/*    font-size: 40px;*/
+/*    font-weight: 600;*/
+/*    line-height: 54px;*/
+/*    width: 100%;*/
+/*    text-align: center;*/
+/*}*/
 
-.house {
-    text-decoration: none;
-    color: #FFFFFF;
-    font-family: Post No Bills Jaffna SemiBold, sans-serif;
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 54px;
-    width: 100%;
-    text-align: center;
-}
-
-.residential {
-    margin-left: -3px;
-    font-family: Raleway, sans-serif;
-    font-weight: 400;
-    font-size: 11px;
-    line-height: 14px;
-    letter-spacing: 0.12em;
-    color: #FFFFFF;
-    height: 14px;
-    width: 167px;
-    text-align: center;
-}
+/*.residential {*/
+/*    margin-left: -3px;*/
+/*    font-family: Raleway, sans-serif;*/
+/*    font-weight: 400;*/
+/*    font-size: 11px;*/
+/*    line-height: 14px;*/
+/*    letter-spacing: 0.12em;*/
+/*    color: #FFFFFF;*/
+/*    height: 14px;*/
+/*    width: 167px;*/
+/*    text-align: center;*/
+/*}*/
 
 .menu-header {
     background: #242B33;
@@ -90,7 +85,11 @@
 
 @media (max-width:320px) {
     .logo-house {
-        margin-left: 25px;
+        margin-left: -55px;
+    }
+
+    .residential {
+        margin-left: 0;
     }
 
     .menu-header {
