--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -13,13 +13,32 @@
 }
 
 @media (max-width:320px) {
-
-    .about-title {
-        margin-left: 30px;
+    .about_title {
+        font-size: 30px;
     }
 
-    .about-text {
-        margin-left: 30px;
-        margin-right: 30px;
+    #about {
+        padding: 50px 15px 0 15px;
+    }
+
+    .img-header {
+        display: none;
     }
 }
+
+@media (min-width: 321px) and (max-width: 768px) {
+    #about {
+        padding: 50px 15px 40px 15px;
+    }
+
+    .img-header {
+        display: none;
+    }
+
+
+}
+
+
+
+
+
