--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,14 +10,12 @@
 //Стили
 
 @import "landing";
-
-
 @import 'login';
 @import 'register';
 
-@import "adaptiv_320";
-@import "adaptiv_768";
-@import "adaptiv_1100.css";
+//@import "adaptiv_320";
+//@import "adaptiv_768";
+//@import "adaptiv_1100.css";
 
 
 @import 'login';
