--- a/resources/sass/client.scss
+++ b/resources/sass/client.scss
@@ -1,3 +1,10 @@
+.title-2 {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 1.33;
+    color: #D4C17F;
+}
 
 .client{
     background-color: #242B33;
