--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -9,9 +9,10 @@
 }
 
 .login-form {
-    height: 80vh;
-    background: #242B33;
-    padding-top: 100px;
+    border: 1px solid #FFFFFF;
+    border-radius: 20px;
+    padding: 40px;
+    margin: 175px 0;
 }
 .login-element {
     display: flex;
