--- a/resources/sass/register.scss
+++ b/resources/sass/register.scss
@@ -9,8 +9,10 @@
 }
 
 .register-form {
-    height: 100vh;
-    margin-bottom: 50px;
+    border: 1px solid #FFFFFF;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding: 40px;
 }
 .register-element {
     display: flex;
