--- a/resources/css/Identically/menu.css
+++ b/resources/css/Identically/menu.css
@@ -1,27 +1,3 @@
-/*.house {*/
-/*    text-decoration: none;*/
-/*    color: #FFFFFF;*/
-/*    font-family: Post No Bills Jaffna SemiBold, sans-serif;*/
-/*    font-size: 40px;*/
-/*    font-weight: 600;*/
-/*    line-height: 54px;*/
-/*    width: 100%;*/
-/*    text-align: center;*/
-/*}*/
-
-/*.residential {*/
-/*    margin-left: -3px;*/
-/*    font-family: Raleway, sans-serif;*/
-/*    font-weight: 400;*/
-/*    font-size: 11px;*/
-/*    line-height: 14px;*/
-/*    letter-spacing: 0.12em;*/
-/*    color: #FFFFFF;*/
-/*    height: 14px;*/
-/*    width: 167px;*/
-/*    text-align: center;*/
-/*}*/
-
 .menu-header {
     background: #242B33;
     border-color: #2b2b2c;
@@ -118,9 +94,9 @@
     }
 
     .img-header {
-        width: 100%;
-
+        display: none;
     }
+
 }
 
 @media (min-width: 321px) and (max-width: 768px) {
