--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -1,10 +1,17 @@
+#about {
+    border: 1px solid #FFFFFF;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding: 40px;
+}
+
 .about_title {
     font-family: 'Playfair Display', serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.33;
     color: #D4C17F;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .about_text {
@@ -21,9 +28,7 @@
         padding: 50px 15px 0 15px;
     }
 
-    .img-header {
-        display: none;
-    }
+
 }
 
 @media (min-width: 321px) and (max-width: 768px) {
