--- a/resources/css/rates.css
+++ b/resources/css/rates.css
@@ -1,10 +1,17 @@
+#rates {
+    border: 1px solid #FFFFFF;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding: 40px
+}
+
 .rates_title {
     font-family: 'Playfair Display', serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.33;
     color: #D4C17F;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .rates_text {
