--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -122,12 +122,6 @@ li {
         max-width: 768px;
     }
 
-    .wrapper ul {
-        /*top: 71px;*/
-        /*left: 32px;*/
-        /*transform: translate(0, 0);*/
-         }
-
     nav {
         margin: 0;
         display: flex;
@@ -136,6 +130,10 @@ li {
 
     .first_row {
         margin: 18px 0 0 0;
+    }
+
+    .map-bottom {
+        padding: 0 5px;
     }
 
 }
