--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -2,20 +2,17 @@
     margin: 0;
     padding: 0;
 }
-
 a {
     text-decoration: none;
     color: inherit;
 }
-
 a:hover {
     color: white;
 }
-
 body {
     text-align:center;
-    background-color: #242B33;
-
+    font-family: Raleway, sans-serif;
+    background: #242B33;
 }
 
 /*Оцентровка*/
@@ -25,40 +22,24 @@ body {
     text-align: left;
 }
 
-/*Секция карта*/
-.content-map {
-    background-color: #242B33;
-}
-
-.map {
-    font-family: 'Playfair Display', serif;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.33;
-    color: #D4C17F;
-    margin-left: 100px;
-    margin-bottom: 50px;
-}
 /*Секция меню*/
 nav {
     color: white;
     display: flex;
-    background-color: #242B33;
     align-items: center;
     font-family: Post No Bills Jaffna SemiBold, sans-serif;
     font-size: 14px;
     margin-top: 10px;
  }
-
 li {
     float: left;
     margin-left: 16px;
 }
-
 .first_row {
     margin-left: 60px;
 }
 
+/*Логотип верхний*/
 .house {
     text-decoration: none;
     color: #FFFFFF;
@@ -69,10 +50,8 @@ li {
     width: 100%;
     text-align: center;
 }
-
 .residential {
     margin-left: -3px;
-    font-family: Raleway, sans-serif;
     font-weight: 400;
     font-size: 11px;
     line-height: 14px;
@@ -82,62 +61,115 @@ li {
     width: 167px;
     text-align: center;
 }
+.title_name {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.33;
+    color: #D4C17F;
+    margin-bottom: 20px;
+    text-align: left;
+}
 
 @media (max-width:320px) {
     #wrapper {
         max-width: 320px;
     }
-
     nav {
         align-items: normal;
-        margin: 25px 0 0 129px;
+        margin: 25px 0 0 64px;
         display: block;
         font-size: 16px;
     }
-
     .first_row {
-        margin: 23px 109px 0 -27px;
+        margin: 25px 0 0 0;
     }
-
     li {
         float: none;
-        margin: 0;
+        font-size: 22px;
     }
-    .map {
-        font-size: 30px;
+    .house {
+         font-size: 54px;
+    }
+    .residential {
         margin-left: 5px;
-        margin-bottom: 5px;
+        font-size: 12px;
     }
-
     .map-bottom {
-        padding: 0 2px;
+        margin: 0 5px;
     }
-
-
 }
 
-@media (min-width: 321px) and (max-width: 768px) {
+@media (min-width: 321px) and (max-width: 375px) {
+    #wrapper {
+        max-width: 375px;
+    }
+    nav {
+        display: block;
+        margin-bottom: 30px;
+    }
+    .logo-house {
+        margin-left: 100px;
+        margin-bottom: 20px;
+    }
+    li {
+        float: none;
+        font-size: 20px;
+    }
+    .map-bottom {
+        margin: 0 5px;
+    }
+}
 
+@media (min-width: 376px) and (max-width: 425px) {
+    #wrapper {
+        max-width: 425px;
+    }
+    nav {
+        display: block;
+    }
+    .logo-house {
+        margin-left: 100px;
+        margin-bottom: 20px;
+    }
+    li {
+        float: none;
+        font-size: 20px;
+    }
+    .map-bottom {
+        margin: 0 5px;
+    }
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
     #wrapper {
         max-width: 768px;
     }
-
-    nav {
-        margin: 0;
-        display: flex;
-        font-size: 14px;
+    .logo-house {
+        margin-left: 50px;
+        margin-bottom: 20px;
     }
-
-    .first_row {
-        margin: 18px 0 0 0;
-    }
-
     .map-bottom {
-        padding: 0 5px;
+        margin: 0 5px;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    #wrapper {
+        max-width: 1024px;
+    }
+    li {
+        font-size: 20px;
+    }
+    .logo-house {
+        margin-left: 50px;
+        margin-bottom: 20px;
+    }
+    .map-bottom {
+        margin: 0 5px;
     }
 
 }
-
 
 
 
