--- a/resources/css/Content/flats.css
+++ b/resources/css/Content/flats.css
@@ -1,51 +1,32 @@
 .menu-flats {
     width: 100%;
     margin: 0 auto;
-    background: #242B33;
 }
-
 .flats-position-text {
     margin: 0 0 20px 100px;
     max-width: 1100px;
-    width: 100%;
 }
-
-.flats-txt {
-    color: #D4C17F;
-    font-family: 'Playfair Display', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 48px;
-}
-
 .flats-items {
     max-width: 1100px;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     list-style-type: none;
-    padding: 0;
     margin: 0 auto;
 }
-
 .flats-item {
     width: 535px;
     height: 320px;
     margin: 0 0 30px;
 }
-
 .flats-photo {
     width: 535px;
     height: 320px;
     position: absolute;
     border-radius: 10px;
 }
-
 .flats-text {
-    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -60,41 +41,51 @@
     .menu-flats {
         margin-top: -98px;
     }
-
     .flats-txt {
         text-align: center;
         font-size: 33px;
         line-height: 48px;
     }
-
     .flats-items {
-        max-width: 320px;
-        width: 100%;
-        margin-top: -86px;
+        margin: -86px 0 0 0;
     }
-
     .flats-item {
         width: 99%;
         height: 320px;
     }
-
     .flats-photo {
-        width: 99%;
         height: 185px;
     }
-
     .flats-text {
         font-size: 20px;
+        top: 115px;
     }
-
     .flats-position-text {
         margin: 123px 0;
     }
 }
 
-@media (min-width: 321px) and (max-width: 768px) {
+@media (min-width: 321px) and (max-width: 375px) {
     .flats-items {
-    padding: 0 105px;
+        padding: 0 105px;
     }
-
+    .flats-position-text {
+        margin: 0 0 20px 0;
+    }
+    .flats-items {
+        padding: 0;
+    }
+    .watching-section {
+        padding: 0 0 150px 5px;
+    }
 }
+
+@media (min-width: 376px) and (max-width: 425px) {
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
