--- a/resources/css/Content/watch.css
+++ b/resources/css/Content/watch.css
@@ -1,9 +1,8 @@
 .watching-section {
     background: url('/resources/js/components/img/watching-bg.png') center / cover no-repeat;
-    padding: 180px 0;
+    padding: 180px 0 180px 150px;
     box-sizing: border-box;
 }
-
 .watching_title {
     font-family: 'Playfair Display', serif;
     font-weight: 700;
@@ -12,101 +11,89 @@
     color: #D4C17F;
     margin-bottom: 50px;
     text-align: left;
+    padding: 0 100px;
 }
-
 .watching-section_wrp {
     display: flex;
-    font-family: 'Raleway', sans-serif;
 }
-
 .watching-section_text {
     flex: 1;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 15px;
     line-height: 1.5;
     color: #FFFFFF;
 }
-
 .watching-section_form {
     flex: 1;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 35px 30px;
 }
-
 .watching_text {
     background: #D4C17F;
     border-color: #D4C17F;
     color: black;
-    font-family: Raleway, sans-serif;
 }
-
 .watching_bottom_text {
     color: #FFFFFF;
     text-align: center;
     font-size: 12px;
 }
-
 .watching_button {
     background: White;
     border-color: White;
     color: black;
 }
 
-@media (max-width:320px) {
+ @media (max-width:320px) {
+     .watching-section_wrp {
+         display: block;
+         padding: 0 5px;
+     }
+     .watching-section {
+         padding: 50px 0 50px 5px;
+        }
+     .watching-section_form {
+         display: block;
+         padding-right: 10px;
+     }
+     .watching_button {
+         width: 100%;
+     }
+     .watching-section_text {
+     padding-right: 10px;
+     }
+ }
 
-    .watching_title {
-       font-size: 23px;
-        margin-bottom: 10px;
-        text-align: center;
+
+@media (min-width: 321px) and (max-width: 375px) {
+    .watching-section {
+        padding: 0 0 150px 5px;
+
     }
-
-    .watching-section_wrp {
-        display: block;
-        text-align: center;
-        padding: 0 10px;
-    }
-
-    .watching-section_text {
-        font-size: 13px;
-        text-align: left;
-        margin-bottom: 18px;
-    }
-
+    .watching-section_wrp,
     .watching-section_form {
         display: block;
+        margin-right: 5px;
     }
-
-    .watching-section_form p {
-        margin-top: 18px;
-        margin-bottom: 18px;
+    .watching-section_text {
+     font-size: 11px;
     }
-
-    .watching-section {
-        padding: 0;
-        box-sizing: border-box;
-    }
-
+    .watching_text,
     .watching_button {
-        width: 89%;
-    }
-
-    .watching_text {
-        margin-top: 5px;
-        width: 89%;
+        width: 100%;
     }
 }
 
-@media (min-width: 321px) and (max-width: 768px) {
-    .watching-section_wrp {
-        padding: 0 10px;
-    }
-    .watching_title {
-     padding-left: 10px;
-        margin-bottom: 20px;
-        font-size: 34px;
-    }
-
-
-
+@media (min-width: 376px) and (max-width: 425px) {
 }
+
+@media (min-width: 426px) and (max-width: 768px) {
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+
+
+
